<resources>
    <string name="app_name">Magpie-Wingman</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="profile_picture">Profile Picture</string>
    <string name="remove_entrant">Remove entrant</string>
    <string name="remove_profile">Remove profile</string>
    <string name="event_poster">Event Poster</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="delete_header">Delete Account</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Strings related to edit profile -->
    <string name="title_edit_profile">Edit Profile</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">DD/MM/YYYY</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_edit_password">Edit Password</string>
    <string name="role_entrant">Entrant</string>
    <string name="role_organizer">Organizer</string>
    <string name="action_update">Update</string>

    <!-- Strings related to invitation items -->
    <string name="content_desc_event_poster">Event poster</string>
    <string name="content_desc_accept_invitation">Accept invitation</string>
    <string name="content_desc_decline_invitation">Decline invitation</string>

    <!-- Strings related to lottery items -->
    <string name="error_empty_number">Please enter a number.</string>
    <string name="error_invalid_number">Invalid number.</string>
    <string name="error_non_positive_number">Please enter a positive number.</string>
    <string name="msg_sample_success">Successfully sampled %1$d entrants!</string>
    <string name="msg_selected_notification">Congratulations! You’ve been selected to register for the event.</string>
    <string name="msg_not_selected_notification">Unfortunately, you were not selected in the lottery for this event.</string>
    <string name="msg_notify_success">Notified all selected entrants.</string>
    <string name="error_notify_failed">Error sending notifications: %1$s</string>
    <string name="error_lottery_failed">Error running lottery: %1$s</string>

    <!-- Strings related to notification items -->
    <string name="notify_title">Notify</string>
    <string name="enter_notification_title">Enter Notification Title:</string>
    <string name="notification_title_hint">Title</string>
    <string name="enter_notification">Enter Notification:</string>
    <string name="notification_message_hint">Message</string>
    <string name="waiting_list">Waiting\nList</string>
    <string name="selected_entrants">Selected\nEntrants</string>
    <string name="cancelled_entrants">Cancelled\nEntrants</string>
    <string name="send_notification">Send Notification</string>
    <string name="error_empty_title_or_message">Please enter a title and message.</string>
    <string name="error_no_group_selected">Please select at least one recipient group.</string>
    <string name="msg_notification_sent">Notification sent to %1$s entrants.</string>
    <string name="error_notification_failed">Error sending to %1$s: %2$s</string>

    <!-- Strings related to waitlist items -->
    <string name="waitlist_title">Waiting List</string>
    <string name="waitlist_empty_message">No entrants on the waiting list.</string>
    <string name="waitlist_default_name">Entrant</string>
    <string name="toast_failed_waitlist">Failed to load waitlist: %1$s</string>

    <string name="list_item_event_join_button">Join waitlist</string>
    <string name="join_waitlist">Join</string>
    <string name="leave_waitlist">Leave</string>
    <string name="events">Events</string>
</resources>